WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174446
Fix block style in WebVideoFullscreen classes.
https://bugs.webkit.org/show_bug.cgi?id=174446
Summary
Fix block style in WebVideoFullscreen classes.
Jeremy Jones
Reported
2017-07-12 17:26:52 PDT
Fix block style in WebVideoFullscreen classes.
Attachments
Patch
(3.53 KB, patch)
2017-07-12 17:28 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2017-07-12 17:28:00 PDT
Created
attachment 315315
[details]
Patch
WebKit Commit Bot
Comment 2
2017-07-13 11:19:42 PDT
Comment on
attachment 315315
[details]
Patch Clearing flags on attachment: 315315 Committed
r219456
: <
http://trac.webkit.org/changeset/219456
>
WebKit Commit Bot
Comment 3
2017-07-13 11:19:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug