Fix block style in WebVideoFullscreen classes. https://bugs.webkit.org/show_bug.cgi?id=174446

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-07-13
Reviewed by Eric Carlson.

No behavior change.

* platform/ios/WebVideoFullscreenControllerAVKit.mm:
(WebVideoFullscreenControllerContext::setVideoLayerFrame):
* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(-[WebAVPlayerLayer layoutSublayers]):
(getWebAVPictureInPicturePlayerLayerViewClass):
(getWebAVPlayerLayerViewClass):

Canonical link: https://commits.webkit.org/191284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219456 268f45cc-cd09-0410-ab3c-d52691b4dbfc